--- a/src/requirements/mariadb/conf/50-server.cnf
+++ b/src/requirements/mariadb/conf/50-server.cnf
@@ -6,7 +6,7 @@ socket                  = /run/mysqld/mysqld.sock
 basedir                 = /usr
 datadir                 = /var/lib/mysql
 tmpdir                  = /tmp
-bind-address            = *
+bind-address            = 0.0.0.0
 port                    = 3306
 
 character-set-server  	= utf8mb4
