--- a/src/requirements/wordpress/Dockerfile
+++ b/src/requirements/wordpress/Dockerfile
@@ -1,6 +1,13 @@
 FROM debian:12.5
 
-RUN apt-get update && apt install curl -y && apt install mariadb-client
+RUN apt-get update && apt install curl -y && apt install mariadb-client -y
+
+RUN apt-get -y install wget \
+php \
+php-cgi \
+php-pdo \
+php-gd php-cli \
+php-mbstring
 
 RUN apt install php-fpm php-mysql -y
 
