wordpress can't access

--- a/src/requirements/nginx/conf/default.conf
+++ b/src/requirements/nginx/conf/default.conf
@@ -15,11 +15,12 @@ server{
 		try_files $uri =404;
 		#Makes NGINX pass PHP requested to Wordpress (Where FastCGI server's listening on)
 		fastcgi_pass wordpress:9000;
+		#Served index.php if no specific file
+		fastcgi_index index.php;
 		#Include everything FastCGI need to have for communicating with NGINX
 		include fastcgi_params;
 		#Nginx sets the SCRIPT_FILENAME parameter to the absolute path of the requested PHP script file
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-
-		error_log /var/log/nginx/error.log;
 	}
+	error_log /var/log/nginx/error.log;
 }
