wordpress can not access

--- a/src/requirements/nginx/conf/default.conf
+++ b/src/requirements/nginx/conf/default.conf
@@ -7,12 +7,16 @@ server{
 	ssl_certificate_key /etc/nginx/ssl/plertsir.42.fr.key;
 
 	#root index and servername
-	root /var/www/html;
+	root /var/www/html/wordpress;
 	server_name plertsir.42.fr;
     index index.php index.nginx-debian.html;
 
-	location ~ [^/]\.php(/|$) {
-		try_files $uri =404;
+	location / {
+		try_files $uri $uri/ =404;
+	}
+
+	# location ~ [^/]\.php(/|$) {
+	location ~ \.php$ {
 		#Makes NGINX pass PHP requested to Wordpress (Where FastCGI server's listening on)
 		fastcgi_pass wordpress:9000;
 		#Served index.php if no specific file
