wordpress can be opened now but still weired...

--- a/src/requirements/nginx/conf/default.conf
+++ b/src/requirements/nginx/conf/default.conf
@@ -12,15 +12,13 @@ server{
     index index.php index.nginx-debian.html;
 
 	location / {
-		try_files $uri $uri/ =404;
-	}
+        try_files $uri $uri/ /index.php?$args;
+    }
 
 	# location ~ [^/]\.php(/|$) {
 	location ~ \.php$ {
 		#Makes NGINX pass PHP requested to Wordpress (Where FastCGI server's listening on)
 		fastcgi_pass wordpress:9000;
-		#Served index.php if no specific file
-		fastcgi_index index.php;
 		#Include everything FastCGI need to have for communicating with NGINX
 		include fastcgi_params;
 		#Nginx sets the SCRIPT_FILENAME parameter to the absolute path of the requested PHP script file
