repeatly got index.php

--- a/src/requirements/nginx/Dockerfile
+++ b/src/requirements/nginx/Dockerfile
@@ -2,8 +2,7 @@ FROM debian:12
 
 RUN apt-get update && apt-get install nginx -y && apt install openssl -y
 
-COPY ./conf/default.conf /etc/nginx/conf.d/
-
+COPY ./conf/nginx.conf /etc/nginx/conf.d/
 COPY ./tools/script.sh /
 
 EXPOSE 443
