--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -4,6 +4,23 @@ networks:
   inception:
     name: inception
 
+volumes:
+  wordpress:
+    name: wordpress
+    driver: local
+    driver_opts:
+      device: /Users/phuwanate/data/wordpress
+      o: bind
+      type: none
+
+  mariadb:
+    name: mariadb
+    driver: local
+    driver_opts:
+      device: /Users/phuwanate/data/database
+      o: bind
+      type: none
+
 services:
   nginx:
     container_name: nginx
@@ -13,6 +30,8 @@ services:
      - "443:443"
     depends_on:
       - wordpress
+    volumes:
+     - wordpress:/var/www/html
     networks:
       - inception
     env_file:
@@ -24,6 +43,8 @@ services:
     image: wordpress:final
     depends_on:
       - mariadb
+    volumes:
+      - wordpress:/var/www/html
     networks:
       - inception
     env_file:
@@ -33,6 +54,8 @@ services:
     container_name: mariadb
     build: requirements/mariadb/.
     image: mariadb:final
+    volumes:
+      - mariadb:/var/lib/mysql
     networks:
       - inception
     env_file:
