--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -12,13 +12,10 @@ server{
 	root /var/www/html/;
 	index index.php;
 
-	location / {
-		try_files $uri $uri/ =404;
-    }
-
 	location ~ \.php$ {
 		fastcgi_pass wordpress:9000;
 		include fastcgi_params;
+		fastcgi_index index.php;
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 	}
 }
